[package]
name = "crkbdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
embedded-hal = "0.2"
usb-device = "0.2"
xiao_m0 = { version= "0.11", features = ["unproven", "usb"]}
cortex-m-rtic = "0.5"
panic-halt = "0.2"
cortex-m = "0.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = false
lto = true
opt-level = "s"